<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_starter"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".presentation.ui.fragments.main.SettingsFragment">

    <com.unifit.unifit.presentation.ui.customs.BackButtonView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/margin_10"/>

    <TextView
        android:id="@+id/settings"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewTitle"
        android:layout_margin="@dimen/margin_10"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10">
            <TextView
                android:text="@string/music"
                style="@style/TextViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <!--TODO STYLE IT -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/SwitchTheme"
            />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10">
            <TextView
                android:text="@string/profile"
                style="@style/TextViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <ImageView
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:layout_width="@dimen/baseline_size"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFitnessReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10">
            <TextView
                android:text="@string/fitness_reminder"
                style="@style/TextViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                style="@style/TextViewTitle2"
                tools:text="20:00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_fitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/SwitchTheme"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSleepReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10">
            <TextView
                android:text="@string/sleep_reminder"
                style="@style/TextViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                style="@style/TextViewTitle2"
                tools:text="20:00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/SwitchTheme"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>