<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeightHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardElevation="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/tvWeight"
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewTitle2"/>
            <TextView
                android:id="@+id/tvWeightValue"
                android:text="@string/enter_weight"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWeight"
                style="@style/TextViewPlain"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:id="@+id/tvHeight"
                        android:text="@string/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextViewTitle2"/>
                    <TextView
                        android:id="@+id/tvHeightValue"
                        android:text="@string/enter_height"
                        android:layout_marginHorizontal="@dimen/margin_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvWeight"
                        style="@style/TextViewPlain"/>
                </LinearLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_10">

                <TextView
                    android:id="@+id/tvBMI"
                    android:text="BMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewTitle2"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/tvBMIValue"
                    tools:text="19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvBMI"
                    style="@style/TextViewPlain"/>

                <ProgressBar
                    android:id="@+id/progressBarBMI"
                    android:layout_below="@id/tvBMIValue"
                    android:layout_width="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:max="50"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20">
        <Button
            android:text="Restart"
            android:layout_below="@id/llKCalBurned"
            android:layout_centerHorizontal="true"
            style="@style/ButtonPlainSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:text="Exit"
            android:layout_below="@id/llKCalBurned"
            android:layout_centerHorizontal="true"
            style="@style/ButtonPlainSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>